fix: fix toggle menu on mobile devices

--- a/frontend_portfolio/src/components/Navbar/navbar.scss
+++ b/frontend_portfolio/src/components/Navbar/navbar.scss
@@ -79,87 +79,81 @@
   }
 }
 
-.app__navbar-menu {
-  width: 35px;
-  height: 35px;
-  border-radius: 50%;
-  position: relative;
+.navigation {
+  position: absolute;
+  right: 0;
+  top: 0;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: var(--secondary-color);
+  width: 70%;
+  height: 100vh;
 
-  svg {
-    width: 70%;
-    height: 70%;
-    color: var(--white-color);
-  }
+  background-image: url("../../assets/bgWhite.png");
+  background-color: var(--white-color);
+  background-size: cover;
+  background-repeat: no-repeat;
 
-  div {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    z-index: 5;
+  box-shadow: 0 0 20px rgba(168, 168, 168, 0.15);
 
-    padding: 1rem;
+  transform: translateX(100%);
+  transition: all 0.3s linear;
 
-    width: 80%;
-    height: 100vh;
-
+  ul {
+    list-style: none;
+    margin: 5rem 0 0 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    text-align: center;
     display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
+    justify-content: flex-start;
+    align-items: center;
     flex-direction: column;
 
-    background-image: url("../../assets/bgWhite.png");
-    background-color: var(--white-color);
-    background-size: cover;
-    background-repeat: no-repeat;
+    li {
+      margin: 1rem;
+      a {
+        color: var(--gray-color);
+        text-decoration: none;
+        font-size: 1.2rem;
+        text-transform: uppercase;
+        font-weight: 500;
 
-    box-shadow: 0 0 20px rgba(168, 168, 168, 0.15);
-
-    svg {
-      width: 35px;
-      height: 35px;
-      color: var(--secondary-color);
-      margin: 0.5ren 1rem;
-    }
-
-    ul {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      width: 100%;
-
-      display: flex;
-      justify-content: flex-start;
-      align-items: flex-start;
-      flex-direction: column;
-
-      li {
-        margin: 1rem;
-
-        a {
-          color: var(--gray-color);
-          text-decoration: none;
-          font-size: 1rem;
-          text-transform: uppercase;
-          font-weight: 500;
-
-          &:hover {
-            color: var(--secondary-color);
-          }
+        &:hover {
+          color: var(--secondary-color);
         }
       }
     }
-    @media screen and (min-width: 900px) {
-      display: none;
-    }
+  }
+
+  @media screen and (min-width: 900px) {
+    display: none;
+  }
+}
+
+.nav-open {
+  transform: translateX(0%);
+}
+
+.hamburger {
+  width: 30px;
+  height: 22px;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  position: absolute;
+  top: 35px;
+  right: 20px;
+  z-index: 1000;
+  transition: all 0.2s linear;
+  div {
+    width: 100%;
+    height: 3px;
+    background-color: var(--gray-color);
   }
   @media screen and (min-width: 900px) {
     display: none;
   }
+}
+.hamburger-toggled {
+  transform: rotate(-90deg);
 }
